--- a/web/berry/package.json
+++ b/web/berry/package.json
@@ -42,7 +42,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build && mv -f build ../build/berry",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fix-memory-limit": "cross-env LIMIT=2048 increase-memory-limit"
   },
   "eslintConfig": {
     "extends": [
