--- a/web/default/package.json
+++ b/web/default/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build && mv -f build ../build/default",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fix-memory-limit": "cross-env LIMIT=2048 increase-memory-limit"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,5 @@
     "singleQuote": true,
     "jsxSingleQuote": true
   },
-  "proxy": "http://localhost:3000",
-  "fix-memory-limit": "cross-env LIMIT=2048 increase-memory-limit"
+  "proxy": "http://localhost:3000"
 }
